# windy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: deploy.yml  release.yml
conformance/: cases.json  v1.json
docs/: esolangs-wiki.md  v1.0-design.md
examples/: anthem.wnd  bf.wnd  gust.wnd  hello_winds.wnd  storm.wnd
rust/: Cargo.toml
rust/src/: opcodes.rs  vm.rs
rust/tests/: conformance.rs
src/: debugger.rs  easter.rs  grid.rs  lib.rs  main.rs  opcodes.rs  parser.rs  vm.rs  wasm_api.rs
src/windy/: __init__.py  cli.py  compiler.py  debugger.py  easter.py  ir.py  opcodes.py  parser.py  vm.py  wasm.py
tests/: conformance.rs  conformance_v1.rs  test_cli.py  test_compiler.py  test_conformance.py  test_debugger.py  test_easter.py  test_ir.py  test_opcodes.py  test_parser.py  test_vm.py  test_wasm.py
web/: README.md  index.html  main.js  style.css
