[project]
name = "windy"
version = "0.1.0"
description = "Windy — a 2D esoteric programming language where code flows like wind"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kim Sangkeun", email = "windy@classum.com" },
]
license = { text = "MIT" }
keywords = ["esolang", "esoteric", "programming-language", "2d", "befunge", "wasm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
windy = "windy.cli:app"

[project.urls]
Repository = "https://github.com/sisobus/windy"
Specification = "https://github.com/sisobus/windy/blob/main/SPEC.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/windy"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic API uses function calls as argument defaults.
"src/windy/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
